# chess_games

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.37c6c75  README.md  TODO.md  adminwidget.cpp  adminwidget.h  formheader.cpp  formwidget.h  loginwidget.cpp  loginwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  sqlworker.cpp  sqlworker.h  stylesheet.qss  userwidget.cpp  userwidget.h
adminwidgets/: TODO.md  chessplayerswidget.cpp  chessplayerswidget.h  gameswidget.cpp  gameswidget.h  judgeswidget.cpp  judgeswidget.h  openingswidget.cpp  openingswidget.h  placeswidget.cpp  placeswidget.h  tournamentswidget.cpp  tournamentswidget.h
form/: formheader.cpp  formheader.h  formwidget.cpp  formwidget.h
userwidgets/: chessgameslistwidget.cpp  chessgameslistwidget.h  chessplayersstatswidget.cpp  chessplayersstatswidget.h  openingsstatswidget.cpp  openingsstatswidget.h  tournamentsstatswidget.cpp  tournamentsstatswidget.h
